# ChangeLog for app-laptop/laptop-mode-tools
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-laptop/laptop-mode-tools/ChangeLog,v 1.14 2005/08/26 10:18:20 brix Exp $

  26 Aug 2005; Henrik Brix Andersen <brix@gentoo.org>
  -files/laptop-mode-tools-1.07-init.d,
  -files/laptop-mode-tools-1.08-init.d,
  -files/laptop-mode-tools-1.09-init.d, -laptop-mode-tools-1.07.ebuild,
  -laptop-mode-tools-1.08.ebuild, -laptop-mode-tools-1.09.ebuild:
  Pruned old versions.

*laptop-mode-tools-1.10 (17 Aug 2005)

  17 Aug 2005; Henrik Brix Andersen <brix@gentoo.org>
  +files/laptop-mode-tools-1.10-init.d, +laptop-mode-tools-1.10.ebuild:
  Version bump.

*laptop-mode-tools-1.09 (17 Aug 2005)

  17 Aug 2005; Henrik Brix Andersen <brix@gentoo.org>
  +files/laptop-mode-tools-1.09-init.d, +laptop-mode-tools-1.09.ebuild:
  Version bump.

*laptop-mode-tools-1.08 (08 Aug 2005)

  08 Aug 2005; Henrik Brix Andersen <brix@gentoo.org>
  +files/laptop-mode-tools-1.08-init.d, +laptop-mode-tools-1.08.ebuild:
  Version bump, bug #101201.

*laptop-mode-tools-1.07 (30 Jul 2005)

  30 Jul 2005; Henrik Brix Andersen <brix@gentoo.org>
  -files/laptop-mode-tools-1.06-init.d,
  +files/laptop-mode-tools-1.07-init.d, -laptop-mode-tools-1.06.ebuild,
  +laptop-mode-tools-1.07.ebuild:
  Version bump to 1.07, which has a new configuration file format. Removed
  1.06 since it turned out to be broken.

*laptop-mode-tools-1.06 (29 Jul 2005)

  29 Jul 2005; Henrik Brix Andersen <brix@gentoo.org>
  +files/laptop-mode-tools-1.06-init.d, +laptop-mode-tools-1.06.ebuild:
  Version bump.

  09 Jul 2005; Joseph Jezak <josejx@gentoo.org>
  laptop-mode-tools-1.05.ebuild:
  Marked ~ppc for bug #98319.

  11 May 2005; <brix@gentoo.org> -files/laptop-mode-tools-1.04.init,
  -laptop-mode-tools-1.04-r1.ebuild:
  Removed old ebuild

  08 May 2005; <brix@gentoo.org> laptop-mode-tools-1.05.ebuild:
  Stable on x86.
