@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/laptop-mode-tools/Attic/laptop-mode-tools-1.10.ebuild,v 1.1 2005/08/17 13:59:41 brix Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/laptop-mode-tools/Attic/laptop-mode-tools-1.10.ebuild,v 1.2 2005/10/15 20:45:37 brix Exp $
 
 inherit linux-info
 
@@ -12,7 +12,7 @@ SRC_URI="http://www.xs4all.nl/~bsamwel/laptop_mode/tools/downloads/${MY_P}.tar.g
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~ppc x86"
 
 IUSE="acpi apm"
 
