@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/dk-bib/Attic/dk-bib-20050810.ebuild,v 1.1 2005/08/17 18:10:42 brix Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/dk-bib/Attic/dk-bib-20050810.ebuild,v 1.2 2005/10/15 20:44:10 brix Exp $
 
 inherit latex-package
 
@@ -12,7 +12,7 @@ SRC_URI="mirror://gentoo/${P}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 
 IUSE=""
 RDEPEND="dev-tex/xkeyval"
